--- a/index.html
+++ b/index.html
@@ -7,8 +7,38 @@
 	<title>Page Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
 	<script src="main.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+<nav class="navbar navbar-expand-md">
+	<!-- Brand -->
+	<a class="navbar-brand" href="#">
+		<img src="img/logo.png" width="250px" alt="uvk">
+	</a>
+  
+	<!-- Toggler/collapsibe Button -->
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+	  <span class="navbar-toggler-icon"></span>
+	</button>
+  
+	<!-- Navbar links -->
+	<div class="collapse navbar-collapse" id="collapsibleNavbar">
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" href="#">О компании</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="#">Услуги</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="#">Контакты</a>
+		</li> 
+	  </ul>
+	</div> 
+  </nav>
+  </nav>
 </body>
 </html>
