--- a/index.html
+++ b/index.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Page Title</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-	<script src="main.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favico/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favico/favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="mask-icon" href="img/favico/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff"></head>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<title>Уральская вагоноремонтная компания</title>
 </head>
-<nav class="navbar navbar-expand-md">
-	<!-- Brand -->
-	<a class="navbar-brand" href="#">
-		<img src="img/logo.png" width="250px" alt="uvk">
-	</a>
-  
-	<!-- Toggler/collapsibe Button -->
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-	  <span class="navbar-toggler-icon"></span>
-	</button>
-  
-	<!-- Navbar links -->
-	<div class="collapse navbar-collapse" id="collapsibleNavbar">
-	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="#">О компании</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="#">Услуги</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="#">Контакты</a>
-		</li> 
-	  </ul>
-	</div> 
-  </nav>
-  </nav>
+<body>
+	<div class="container">
+			<nav class="navbar navbar-expand-sm navbar-light fixed-top">
+				<a class="navbar-brand" href="#">
+					<img src="img/logo.png" height="35x" alt="uvk">
+				</a>
+				<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="collapsibleNavId">
+					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+						<li class="nav-item active text-uppercase">
+							<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-uppercase" href="#">О компании</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Услуги</a>
+							<div class="dropdown-menu" aria-labelledby="dropdownId">
+								<a class="dropdown-item" href="#">Ремонт грузовых вагонов</a>
+								<a class="dropdown-item" href="#">Ремонт колесных пар</a>
+								<a class="dropdown-item" href="#">Дополнительные услуги</a>
+							</div>
+						</li>
+						<li class="nav-item">
+								<a class="nav-link text-uppercase" href="#">Контакты</a>
+							</li>
+					</ul>
+					<span class="number-phone">+7 (3519) 24-86-24</span>
+				</div>
+			</nav>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
