--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,48 +11,98 @@
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="mask-icon" href="img/favico/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff"></head>
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<title>Уральская вагоноремонтная компания</title>
+	<meta name="theme-color" content="#ffffff">
 </head>
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+	integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<title>Уральская вагоноремонтная компания</title>
+</head>
+
 <body>
 	<div class="container">
-			<nav class="navbar navbar-expand-sm navbar-light fixed-top">
-				<a class="navbar-brand" href="#">
-					<img src="img/logo.png" height="35x" alt="uvk">
-				</a>
-				<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="collapsibleNavId">
-					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-						<li class="nav-item active text-uppercase">
-							<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-uppercase" href="#">О компании</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Услуги</a>
-							<div class="dropdown-menu" aria-labelledby="dropdownId">
-								<a class="dropdown-item" href="#">Ремонт грузовых вагонов</a>
-								<a class="dropdown-item" href="#">Ремонт колесных пар</a>
-								<a class="dropdown-item" href="#">Дополнительные услуги</a>
-							</div>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link text-uppercase" href="#">Контакты</a>
-							</li>
-					</ul>
-					<span class="number-phone">+7 (3519) 24-86-24</span>
-				</div>
-			</nav>
+		<nav class="navbar navbar-expand-sm navbar-light">
+			<a class="navbar-brand" href="#">
+				<img src="img/logo.png" height="25x" alt="uvk">
+			</a>
+			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="collapsibleNavId">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item">
+						<a class="nav-link text-uppercase" href="#">О компании</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Услуги</a>
+						<div class="dropdown-menu" aria-labelledby="dropdownId">
+							<a class="dropdown-item" href="#">Ремонт грузовых вагонов</a>
+							<a class="dropdown-item" href="#">Ремонт колесных пар</a>
+							<a class="dropdown-item" href="#">Дополнительные услуги</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-uppercase" href="#">Контакты</a>
+					</li>
+				</ul>
+				<span class="email"><a href="mailto:info@uvrk.ru"><i class="fas fa-envelope"></i></a></span>
+				<span class="number-phone">+7 (3519) 24-86-24</span>
+			</div>
+		</nav>
 	</div>
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-8">
+				<div id="carousel" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#carousel" data-slide-to="1"></li>
+						<li data-target="#carousel" data-slide-to="2"></li>
+						<li data-target="#carousel" data-slide-to="3"></li>
+						<li data-target="#carousel" data-slide-to="4"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<img src="img/carousel/1.jpg" alt="First slide">
+						</div>
+						<div class="carousel-item">
+							<img src="img/carousel/2.jpg" alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img src="img/carousel/3.jpg" alt="Third slide">
+						</div>
+						<div class="carousel-item">
+							<img src="img/carousel/4.jpg" alt="Fourth slide">
+						</div>
+						<div class="carousel-item">
+							<img src="img/carousel/5.jpg" alt="Fifth slide">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="d-flex flex-column">
+					<div class="p-2 bg-info">Flex item 1</div>
+					<div class="p-2 bg-warning">Flex item 2</div>
+					<div class="p-2 bg-primary">Flex item 3</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
