--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-8">
+			<div class="col-md-7 grow-1">
 				<div id="carousel" class="carousel slide" data-ride="carousel">
 					<ol class="carousel-indicators">
 						<li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -92,11 +92,35 @@
 					</a>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-5">
 				<div class="d-flex flex-column">
-					<div class="p-2 bg-info">Flex item 1</div>
-					<div class="p-2 bg-warning">Flex item 2</div>
-					<div class="p-2 bg-primary">Flex item 3</div>
+					<div class="p-2">
+						<span class="date">01.01.1998</span>
+						<div class="d-flex">
+							<div class="info">
+								<a href="#"><img src="img/about.jpg" alt="news-img"></a>
+							</div>
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a></div>
+						</div>
+					</div>
+					<div class="p-2">
+						<span class="date">01.01.1998</span>
+						<div class="d-flex">
+							<div class="info">
+								<a href="#"><img src="img/about.jpg" alt="news-img"></a>
+							</div>
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a></div>
+						</div>
+					</div>
+					<div class="p-2">
+						<span class="date">01.01.1998</span>
+						<div class="d-flex">
+							<div class="info">
+								<a href="#"><img src="img/about.jpg" alt="news-img"></a>
+							</div>
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a></div>
+						</div>	
+					</div>
 				</div>
 			</div>
 		</div>
