--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 						<a class="nav-link text-uppercase" href="#">Контакты</a>
 					</li>
 				</ul>
-				<span class="email"><a href="mailto:info@uvrk.ru"><i class="fas fa-envelope"></i></a></span>
+				<span class="email"><a href="mailto:info@uvrk.ru" title="Связаться с нами"><i
+							class="fas fa-envelope"></i></a></span>
 				<span class="number-phone">+7 (3519) 24-86-24</span>
 			</div>
 		</nav>
@@ -94,37 +95,164 @@
 			</div>
 			<div class="col-sm-5">
 				<div class="d-flex flex-column">
+					<h5>Новости:</h5>
 					<div class="p-2">
-						<span class="date">01.01.1998</span>
+						<span class="date">01.01.2019</span>
 						<div class="d-flex">
 							<div class="info">
 								<a href="#"><img src="img/about.jpg" alt="news-img"></a>
 							</div>
-							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a></div>
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+								consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a>
+							</div>
 						</div>
 					</div>
 					<div class="p-2">
-						<span class="date">01.01.1998</span>
+						<span class="date">01.01.2019</span>
 						<div class="d-flex">
 							<div class="info">
 								<a href="#"><img src="img/about.jpg" alt="news-img"></a>
 							</div>
-							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a></div>
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+								consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a>
+							</div>
 						</div>
 					</div>
 					<div class="p-2">
-						<span class="date">01.01.1998</span>
+						<span class="date">01.01.2019</span>
 						<div class="d-flex">
 							<div class="info">
 								<a href="#"><img src="img/about.jpg" alt="news-img"></a>
 							</div>
-							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a></div>
-						</div>	
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+								consequatur perferendis, ipsum porro minus odit! <a href="#" title="Подробнее">...</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<div id="accordianId" role="tablist" aria-multiselectable="true">
+		<div class="card">
+			<div class="card-header" role="tab" id="section1HeaderId">
+				<h5 class="mb-0">
+					<a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
+						aria-controls="section1ContentId">
+						Ремонт грузовых вагонов
+					</a>
+				</h5>
+			</div>
+			<div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+				<div class="card-body">
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non voluptas ut omnis consequatur,
+					dignissimos molestias velit dolore magni facere. Iste repudiandae facilis illum tempora eligendi.
+					Debitis totam excepturi officiis autem exercitationem soluta pariatur molestias reiciendis amet
+					repudiandae quod aperiam, quam corporis odio commodi perferendis dolorum ipsam nostrum omnis
+					perspiciatis eos!
+				</div>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header" role="tab" id="section2HeaderId">
+				<h5 class="mb-0">
+					<a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true"
+						aria-controls="section2ContentId">
+						Ремонт колесных пар
+					</a>
+				</h5>
+			</div>
+			<div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+				<div class="card-body">
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore alias quisquam quod natus animi
+					odio totam explicabo ut. Sit, voluptatibus! Nesciunt sequi autem velit sint blanditiis consectetur
+					provident magni hic, exercitationem libero molestiae vero, in dolorum explicabo, odio porro
+					doloremque aperiam ipsam repudiandae modi placeat perferendis vitae praesentium recusandae!
+					Voluptas.
+				</div>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header" role="tab" id="section3HeaderId">
+				<h5 class="mb-0">
+					<a data-toggle="collapse" data-parent="#accordianId" href="#section3ContentId" aria-expanded="true"
+						aria-controls="section3ContentId">
+						Дополнительные услуги
+					</a>
+				</h5>
+			</div>
+			<div id="section3ContentId" class="collapse in" role="tabpanel" aria-labelledby="section3HeaderId">
+				<div class="card-body">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam obcaecati vitae pariatur ipsum
+					perspiciatis enim veniam dolorem error sint repellat reprehenderit amet quo fugit ratione, sapiente
+					illum ut dolorum? Distinctio odit iusto earum aliquam sint? Deserunt nostrum qui ullam repellat
+					ipsa, quidem veniam illo. Saepe accusantium voluptatibus accusamus distinctio repellat!
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="carouselId" class="carousel slide" data-ride="carousel">
+		<h4 class="p-4">Наши партнеры:</h4>
+		<div class="carousel-inner" role="listbox">
+			<div class="carousel-item active">
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="img/partners/grs.png" alt="First slide">
+					</div>
+					<div class="col-sm-4">
+						<img src="img/partners/mmk.png" alt="First slide">
+					</div>
+					<div class="col-sm-4">
+						<img src="img/partners/np.png" alt="First slide">
+					</div>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="img/partners/np.png" alt="First slide">
+					</div>
+					<div class="col-sm-4">
+						<img src="img/partners/syg.png" alt="First slide">
+					</div>
+					<div class="col-sm-4">
+						<img src="img/partners/tgk.png" alt="First slide">
+					</div>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="img/partners/tgk.png" alt="First slide">
+					</div>
+					<div class="col-sm-4">
+						<img src="img/partners/tl.png" alt="First slide">
+					</div>
+					<div class="col-sm-4">
+						<img src="img/partners/tl.png" alt="First slide">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<p class="p-2">
+						АО «Уральская вагоноремонтная компания»<br>
+						455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
+						Телефон +7 (3519) 24-86-24<br>
+						Факс +7 (3519) 24-86-22<br>
+						Е-mail secretary@uvrk.ru</p>
+				</div>
+				<div class="col-sm-6">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fugiat omnis numquam nulla neque suscipit.
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
