--- a/index.html
+++ b/index.html
@@ -211,26 +211,13 @@
 			<div class="carousel-item">
 				<div class="row">
 					<div class="col-sm-4">
-						<img src="img/partners/np.png" alt="First slide">
-					</div>
-					<div class="col-sm-4">
 						<img src="img/partners/syg.png" alt="First slide">
 					</div>
 					<div class="col-sm-4">
-						<img src="img/partners/tgk.png" alt="First slide">
+						<img src="img/partners/tls.png" alt="First slide">
 					</div>
-				</div>
-			</div>
-			<div class="carousel-item">
-				<div class="row">
 					<div class="col-sm-4">
 						<img src="img/partners/tgk.png" alt="First slide">
-					</div>
-					<div class="col-sm-4">
-						<img src="img/partners/tl.png" alt="First slide">
-					</div>
-					<div class="col-sm-4">
-						<img src="img/partners/tl.png" alt="First slide">
 					</div>
 				</div>
 			</div>
@@ -248,7 +235,13 @@
 						Е-mail secretary@uvrk.ru</p>
 				</div>
 				<div class="col-sm-6">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fugiat omnis numquam nulla neque suscipit.
+					<p class="p-2">
+						Уральская вагоноремонтная компания состоит в составе
+						объединения производителей железнодорожной техники
+						и в составе Globaltrans.
+					</p>
+					<img src="img/globaltrans.png" alt="Увк">
+					<img class="opzht" src="img/opzt.png" alt="опжт">
 				</div>
 			</div>
 		</div>
