--- a/index.html
+++ b/index.html
@@ -69,18 +69,38 @@
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
 							<img src="img/carousel/1.jpg" alt="First slide">
+							<div class="carousel-caption">
+								<h3>Уральская вагоноремонтная компания</h3>
+								<p>Индивидуальный подход к каждому клиенту</p>
+							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/2.jpg" alt="Second slide">
+							<div class="carousel-caption">
+								<h3>Вагоносборочных цех</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
+							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/3.jpg" alt="Third slide">
+							<div class="carousel-caption">
+								<h3>Запасные детали</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
+							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/4.jpg" alt="Fourth slide">
+							<div class="carousel-caption">
+								<h3>КРС</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
+							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/5.jpg" alt="Fifth slide">
+							<div class="carousel-caption">
+								<h3>Lorem ipsum dolor sit amet.</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
+							</div>
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -133,7 +153,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div id="accordianId" role="tablist" aria-multiselectable="true">
 		<div class="card">
 			<div class="card-header" role="tab" id="section1HeaderId">
@@ -146,11 +165,23 @@
 			</div>
 			<div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
 				<div class="card-body">
-					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non voluptas ut omnis consequatur,
-					dignissimos molestias velit dolore magni facere. Iste repudiandae facilis illum tempora eligendi.
-					Debitis totam excepturi officiis autem exercitationem soluta pariatur molestias reiciendis amet
-					repudiandae quod aperiam, quam corporis odio commodi perferendis dolorum ipsam nostrum omnis
-					perspiciatis eos!
+					<div class="row">
+						<div class="col-sm-6">
+							<h5>Lorem, ipsum.</h5>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
+							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
+							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
+							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
+							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
+							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
+							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
+							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
+							doloremque libero dicta tempore distinctio veritatis praesentium.
+						</div>
+						<div class="col-sm-6">
+							<img src="img/about.jpg" alt="about">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -165,11 +196,34 @@
 			</div>
 			<div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
 				<div class="card-body">
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore alias quisquam quod natus animi
-					odio totam explicabo ut. Sit, voluptatibus! Nesciunt sequi autem velit sint blanditiis consectetur
-					provident magni hic, exercitationem libero molestiae vero, in dolorum explicabo, odio porro
-					doloremque aperiam ipsam repudiandae modi placeat perferendis vitae praesentium recusandae!
-					Voluptas.
+					<div class="row">
+						<div class="col-sm-4">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
+							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
+							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
+							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
+							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
+							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
+							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
+							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
+							doloremque libero dicta tempore distinctio veritatis praesentium.
+						</div>
+						<div class="col-sm-4">
+							<h5>Lorem, ipsum dolor.</h5>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
+							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
+							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
+							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
+							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
+							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
+							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
+							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
+							doloremque libero dicta tempore distinctio veritatis praesentium.
+						</div>
+						<div class="col-sm-4">
+							<img src="img/about.jpg" alt="about">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -184,10 +238,44 @@
 			</div>
 			<div id="section3ContentId" class="collapse in" role="tabpanel" aria-labelledby="section3HeaderId">
 				<div class="card-body">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam obcaecati vitae pariatur ipsum
-					perspiciatis enim veniam dolorem error sint repellat reprehenderit amet quo fugit ratione, sapiente
-					illum ut dolorum? Distinctio odit iusto earum aliquam sint? Deserunt nostrum qui ullam repellat
-					ipsa, quidem veniam illo. Saepe accusantium voluptatibus accusamus distinctio repellat!
+					<div class="row">
+						<div class="col-sm-3">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
+							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
+							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
+							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
+							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
+							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
+							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
+							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
+							doloremque libero dicta tempore distinctio veritatis praesentium.
+						</div>
+						<div class="col-sm-3">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
+							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
+							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
+							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
+							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
+							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
+							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
+							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
+							doloremque libero dicta tempore distinctio veritatis praesentium.
+						</div>
+						<div class="col-sm-3">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
+							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
+							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
+							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
+							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
+							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
+							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
+							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
+							doloremque libero dicta tempore distinctio veritatis praesentium.
+						</div>
+						<div class="col-sm-3">
+							<img src="img/about.jpg" alt="about">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -240,7 +328,7 @@
 						объединения производителей железнодорожной техники
 						и в составе Globaltrans.
 					</p>
-					<img src="img/globaltrans.png" alt="Увк">
+					<img src="img/globaltrans.png" alt="глобалтранс">
 					<img class="opzht" src="img/opzt.png" alt="опжт">
 				</div>
 			</div>
