--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
-				<img src="img/logo.png" height="25x" alt="uvk">
+				<img src="img/logot.png" height="25x" alt="uvk">
 			</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
 				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -65,6 +65,7 @@
 						<li data-target="#carousel" data-slide-to="2"></li>
 						<li data-target="#carousel" data-slide-to="3"></li>
 						<li data-target="#carousel" data-slide-to="4"></li>
+						<li data-target="#carousel" data-slide-to="5"></li>
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
@@ -97,6 +98,13 @@
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/5.jpg" alt="Fifth slide">
+							<div class="carousel-caption">
+								<h3>Lorem ipsum dolor sit amet.</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img src="img/carousel/6.jpg" alt="Six slide">
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
