--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
-				<img src="img/logot.png" height="25x" alt="uvk">
+				<img src="img/logo.png" height="25x" alt="uvk">
 			</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
 				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -65,7 +65,6 @@
 						<li data-target="#carousel" data-slide-to="2"></li>
 						<li data-target="#carousel" data-slide-to="3"></li>
 						<li data-target="#carousel" data-slide-to="4"></li>
-						<li data-target="#carousel" data-slide-to="5"></li>
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
@@ -98,13 +97,6 @@
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/5.jpg" alt="Fifth slide">
-							<div class="carousel-caption">
-								<h3>Lorem ipsum dolor sit amet.</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="img/carousel/6.jpg" alt="Six slide">
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
@@ -161,132 +153,98 @@
 			</div>
 		</div>
 	</div>
-	<div id="accordianId" role="tablist" aria-multiselectable="true">
+	<div id="accordion">
 		<div class="card">
-			<div class="card-header" role="tab" id="section1HeaderId">
-				<h5 class="mb-0">
-					<a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
-						aria-controls="section1ContentId">
-						Ремонт грузовых вагонов
-					</a>
-				</h5>
+			<div class="card-header">
+				<a class="card-link" data-toggle="collapse" href="#collapseOne">
+					<h5 class="mb-0">Ремонт грузовых вагонов</h5>
+				</a>
 			</div>
-			<div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+			<div id="collapseOne" class="collapse show" data-parent="#accordion">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-sm-4">
+								<h5>Lorem, ipsum.</h5>
+							<div class="container"><p>ipsum dolor sit amet consectetur  laudantium repellendus repudiandae nam architecto perferendis provident explicabo expedita totam voluptates quisquam tempora cum ducimus delectus praesentium non, a quas minima! Ad accusamus consequuntur, officiis enim cumque illum non eos. Eius, vero doloribus. Repellendus architecto ipsa odio.</p></div>
+							<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId">
+							  Lorem, ipsum dolor.
+							</button>
+							<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+								<div class="modal-dialog modal-lg" role="document">
+									<div class="modal-content">
+											<div class="modal-header">
+													<h5 class="modal-title">Modal title</h5>
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+															<span aria-hidden="true">&times;</span>
+														</button>
+												</div>
+										<div class="modal-body">
+											<div class="container">
+												<img src="img/licenses/1305.jpg" alt="1305">
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<script>
+								$('#exampleModal').on('show.bs.modal', event => {
+									var button = $(event.relatedTarget);
+									var modal = $(this);
+									// Use above variables to manipulate the DOM
+									
+								});
+							</script>
+						</div>
+						<div class="col-sm-4">
 							<h5>Lorem, ipsum.</h5>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
-							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
-							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
-							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
-							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
-							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
-							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
-							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
-							doloremque libero dicta tempore distinctio veritatis praesentium.
+							<ul class="list-group ">
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Крытый вагон</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Полувагон</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Платформа для перевозки лесоматериалов</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Платформа для перевозки<br> контейнеров</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Хоппер</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Думакар</li>
+								  </ul>
 						</div>
-						<div class="col-sm-6">
-							<img src="img/about.jpg" alt="about">
+						<div class="col-sm-4">
+							<div class="container-fluid">
+								<img src="img/carousel/2.jpg" alt="РемонтГрузовыхВагонов">
+							</div>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="card">
-			<div class="card-header" role="tab" id="section2HeaderId">
-				<h5 class="mb-0">
-					<a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true"
-						aria-controls="section2ContentId">
-						Ремонт колесных пар
-					</a>
-				</h5>
+			<div class="card-header">
+				<a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+					<h5 class="mb-0">Ремонт колесных пар</h5>
+				</a>
 			</div>
-			<div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+			<div id="collapseTwo" class="collapse" data-parent="#accordion">
 				<div class="card-body">
-					<div class="row">
-						<div class="col-sm-4">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
-							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
-							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
-							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
-							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
-							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
-							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
-							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
-							doloremque libero dicta tempore distinctio veritatis praesentium.
-						</div>
-						<div class="col-sm-4">
-							<h5>Lorem, ipsum dolor.</h5>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
-							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
-							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
-							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
-							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
-							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
-							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
-							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
-							doloremque libero dicta tempore distinctio veritatis praesentium.
-						</div>
-						<div class="col-sm-4">
-							<img src="img/about.jpg" alt="about">
-						</div>
-					</div>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat.
 				</div>
 			</div>
 		</div>
 		<div class="card">
-			<div class="card-header" role="tab" id="section3HeaderId">
-				<h5 class="mb-0">
-					<a data-toggle="collapse" data-parent="#accordianId" href="#section3ContentId" aria-expanded="true"
-						aria-controls="section3ContentId">
-						Дополнительные услуги
-					</a>
-				</h5>
+			<div class="card-header">
+				<a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+					<h5 class="mb-0">Дополнительные услуги</h5>
+				</a>
 			</div>
-			<div id="section3ContentId" class="collapse in" role="tabpanel" aria-labelledby="section3HeaderId">
+			<div id="collapseThree" class="collapse" data-parent="#accordion">
 				<div class="card-body">
-					<div class="row">
-						<div class="col-sm-3">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
-							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
-							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
-							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
-							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
-							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
-							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
-							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
-							doloremque libero dicta tempore distinctio veritatis praesentium.
-						</div>
-						<div class="col-sm-3">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
-							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
-							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
-							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
-							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
-							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
-							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
-							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
-							doloremque libero dicta tempore distinctio veritatis praesentium.
-						</div>
-						<div class="col-sm-3">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit nobis excepturi ratione
-							ea laboriosam tenetur numquam repellendus cumque corporis natus voluptatum, impedit optio
-							iure velit architecto quae itaque voluptatem in quod! Ullam numquam error suscipit culpa
-							assumenda mollitia corrupti explicabo cumque distinctio et eveniet ipsum aspernatur vero
-							molestiae recusandae odio, optio excepturi dolorum, praesentium, esse saepe blanditiis ex
-							sint officiis. Doloribus quaerat quisquam quod cumque eaque. Magni doloribus natus commodi
-							quod optio id ratione, ipsa exercitationem consectetur iure. Provident iste quia,
-							laboriosam, rerum recusandae delectus porro voluptatibus rem minima suscipit, quos commodi
-							doloremque libero dicta tempore distinctio veritatis praesentium.
-						</div>
-						<div class="col-sm-3">
-							<img src="img/about.jpg" alt="about">
-						</div>
-					</div>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat.
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
 		<h4 class="p-4">Наши партнеры:</h4>
