--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						</div>
 						<div class="col-sm-4">
 							<div class="container-fluid">
-								<img src="img/carousel/2.jpg" alt="РемонтГрузовыхВагонов">
+								<img class="img-rgv" src="img/carousel/2.jpg" alt="РемонтГрузовыхВагонов">
 							</div>
 							
 						</div>
