--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Платформа для перевозки лесоматериалов</li>
 									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Платформа для перевозки<br> контейнеров</li>
 									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Хоппер</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Думакар</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон">  Думкар</li>
 								  </ul>
 						</div>
 						<div class="col-sm-4">
