--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 	integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <title>Уральская вагоноремонтная компания</title>
 </head>
 
@@ -46,7 +48,7 @@
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-uppercase" href="#">Контакты</a>
+						<a class="nav-link text-uppercase" href="pages/contacts.html">Контакты</a>
 					</li>
 				</ul>
 				<span class="email"><a href="mailto:info@uvrk.ru" title="Связаться с нами"><i
@@ -400,8 +402,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="js/jquery-3.3.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
