--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -110,7 +110,9 @@
                     <p><span>E-mail:</span> secretary@uvrk.ru</p>
                     <p><span>Телефон:</span> +7 (3519) 24-86-24</p>
                     <p><span>Факс:</span> +7 (3519) 24-86-22</p>
+                       
                 </div>
+                <a class="btn" href="#" download="../doc/requisites.pdf" role="button"> <i class="fas fa-download"></i>Скачать реквизиты </a>
             </div>
             <div class="col-sm-6">
                 <div class="container">
