--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -112,7 +112,7 @@
                     <p><span>Факс:</span> +7 (3519) 24-86-22</p>
                        
                 </div>
-                <a class="btn" href="#" download="../doc/requisites.pdf" role="button"> <i class="fas fa-download"></i>Скачать реквизиты </a>
+                <a class="btn" href="../doc/requisites.PDF" download="Реквизиты УВК" role="button"> <i class="fas fa-download"></i>Скачать реквизиты </a>
             </div>
             <div class="col-sm-6">
                 <div class="container">
