--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
-				<img src="img/logo.png" height="25x" alt="uvk">
+				<img src="img/logot.png" height="25x" alt="uvk">
 			</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
 				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -79,35 +79,35 @@
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
-							<img src="img/carousel/1.jpg" alt="First slide">
+							<img src="img/carousel-test/1.jpg" alt="First slide">
 							<div class="carousel-caption">
 								<h3>Уральская вагоноремонтная компания</h3>
 								<p>Индивидуальный подход к каждому клиенту</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/2.jpg" alt="Second slide">
+							<img src="img/carousel-test/2.jpg" alt="Second slide">
 							<div class="carousel-caption">
 								<h3>Вагоносборочных цех</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/3.jpg" alt="Third slide">
+							<img src="img/carousel-test/3.jpg" alt="Third slide">
 							<div class="carousel-caption">
 								<h3>Запасные детали</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/4.jpg" alt="Fourth slide">
+							<img src="img/carousel-test/4.jpg" alt="Fourth slide">
 							<div class="carousel-caption">
 								<h3>КРС</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/5.jpg" alt="Fifth slide">
+							<img src="img/carousel-test/5.jpg" alt="Fifth slide">
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
