--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -69,38 +69,38 @@
     <table class="table">
         <tbody>
             <tr>
-                <td scope="row"><img src="../img/contacts/b.jpg" alt="Боднар В.Е."></td>
+                <td scope="row"><img src="../img/contacts/bodnar.jpg" alt="Боднар В.Е."></td>
                 <td>Боднар Виктор Евгеньевич</td>
                 <td>Генеральный директор</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
-                <td scope="row"><img src="../img/contacts/r.jpg" alt="Рузанова З.А."></td>
+                <td scope="row"><img src="../img/contacts/ryzanova.jpg" alt="Рузанова З.А."></td>
                 <td>Рузанова Зоя Александровна</td>
                 <td>Первый заместитель генерального директора</td>
                 <td>Тел: 24-86-30</td>
             </tr>
             <tr>
-                <td scope="row"><img src="../img/contacts/m.jpg" alt="Морин В.В."></td>
+                <td scope="row"><img src="../img/contacts/morin.jpg" alt="Морин В.В."></td>
                 <td>Морин Виталий Владимирович</td>
                 <td>Главный инженер</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
-                <td scope="row"><img src="../img/contacts/i.jpg" alt="Юхименко Е.Г."></td>
+                <td scope="row"><img src="../img/contacts/yximenkova.jpg" alt="Юхименко Е.Г."></td>
                 <td>Юхименко Елена Геннадьевна</td>
                 <td>Заместитель генерального директора<br> по качеству и технологии</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
             <tr>
-                <td scope="row"><img src="../img/contacts/bb.jpg" alt="Бобринский В.Е."></td>
+                <td scope="row"><img src="../img/contacts/bobrinskiy.jpg" alt="Бобринский В.Е."></td>
                 <td>Бобринский Вячеслав Александрович</td>
                 <td>Финансовый директор</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
-                <td scope="row"><img src="../img/contacts/ch.jpg" alt="Боднар"></td>
+                <td scope="row"><img src="../img/contacts/chanchicova.jpg" alt="Чанчикова Н.Н."></td>
                 <td>Чанчикова Надежда Николаевна</td>
                 <td>Начальник отдела сбыта</td>
                 <td>Тел: 24-86-20</td>
