--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  $preloader = $('.loaderArea'),
 		$loader = $preloader.find('.loader');
 	  $loader.fadeOut();
-	  $preloader.delay(100).fadeOut('slow');
+	  $preloader.delay(250).fadeOut('slow');
 	});
   </script>
 <title>Уральская вагоноремонтная компания</title>
@@ -48,7 +48,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
-				<img src="img/logo.png" height="25x" alt="uvk">
+				<img src="img/logo.png" height="25px" alt="uvk">
 			</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
 				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
