--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -23,15 +23,19 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138353180-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-138353180-1');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-138353180-1');
 </script>
 </head>
 
 <body>
+
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="../index.html">
@@ -119,25 +123,27 @@
                     <p><span>E-mail:</span> secretary@uvrk.ru</p>
                     <p><span>Телефон:</span> +7 (3519) 24-86-24</p>
                     <p><span>Факс:</span> +7 (3519) 24-86-22</p>
-                       
+
                 </div>
-                <a class="btn" href="../doc/requisites.PDF" download="Реквизиты УВК" role="button"> <i class="fas fa-download"></i>Скачать реквизиты </a>
+                <a class="btn" href="../doc/requisites.PDF" download="Реквизиты УВК" role="button"> <i
+                        class="fas fa-download"></i>Скачать реквизиты </a>
             </div>
             <div class="col-sm-6">
                 <div class="container">
-                <p><span>ИНН:</span> 7705742646</p>
-                <p><span>КПП:</span> 745601001</p>
-                <p><span>ОГРН:</span> 1067746823836</p>
-                <p><span>Рассчетный счет:</span> 40702810772000010616 Отделение № 8597 Сбербанка России г. Челябинск</p>
-                <p><span>БИК:</span> 047501602</p>
-                <p><span>Корреспондентский счет:</span> 30101810700000000602</p>
-                <p><span>ОКПО:</span> 96499777</p>
-                <p><span>ОКФС:</span> 34</p>
-                <p><span>ОКАТО:</span> 75438372000</p>
-                <p><span>ОКОПФ:</span> 67</p>
-                <p><span>ОКВЭД:</span> 35.20.9</p>
+                    <p><span>ИНН:</span> 7705742646</p>
+                    <p><span>КПП:</span> 745601001</p>
+                    <p><span>ОГРН:</span> 1067746823836</p>
+                    <p><span>Рассчетный счет:</span> 40702810772000010616 Отделение № 8597 Сбербанка России г. Челябинск
+                    </p>
+                    <p><span>БИК:</span> 047501602</p>
+                    <p><span>Корреспондентский счет:</span> 30101810700000000602</p>
+                    <p><span>ОКПО:</span> 96499777</p>
+                    <p><span>ОКФС:</span> 34</p>
+                    <p><span>ОКАТО:</span> 75438372000</p>
+                    <p><span>ОКОПФ:</span> 67</p>
+                    <p><span>ОКВЭД:</span> 35.20.9</p>
+                </div>
             </div>
-        </div>
         </div>
     </div>
     <footer>
@@ -157,8 +163,8 @@
                         объединения производителей железнодорожной техники
                         и в составе Globaltrans.
                     </p>
-                    <img src="../img/globaltrans.png" alt="глобалтранс">
-                    <img class="opzht" src="../img/opzt.png" alt="опжт">
+                    <img src="../img/partners/globaltrans.png" alt="глобалтранс">
+                    <img class="opzht" src="../img/partners/opzt.png" alt="опжт">
                 </div>
             </div>
         </div>
