--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <script src="js/bootstrap.min.js"></script>
 <script>
 	$(window).on('load', function () {
-	  $preloader = $('.loaderArea'),
-		$loader = $preloader.find('.loader');
-	  $loader.fadeOut();
-	  $preloader.delay(250).fadeOut('slow');
+		$preloader = $('.loaderArea'),
+			$loader = $preloader.find('.loader');
+		$loader.fadeOut();
+		$preloader.delay(250).fadeOut('slow');
 	});
-  </script>
+</script>
 <title>Уральская вагоноремонтная компания</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138353180-1"></script>
@@ -43,7 +43,8 @@
 </head>
 <div class="loaderArea">
 	<div class="loader"></div>
- </div>
+</div>
+
 <body>
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
@@ -154,7 +155,9 @@
 							<div class="info">
 								<a href="#"><img src="img/news-1.jfif" alt="news-img"></a>
 							</div>
-							<div class="info">Сегодня сотрудники Уральской вагоноремонтной компании приняли участие в соревнования по баскетболу, подъёму гири на время и настольному теннису.  <a href="#" title="Подробнее">...</a>
+							<div class="info">Сегодня сотрудники Уральской вагоноремонтной компании приняли участие в
+								соревнования по баскетболу, подъёму гири на время и настольному теннису. <a href="#"
+									title="Подробнее">...</a>
 							</div>
 						</div>
 					</div>
@@ -164,7 +167,9 @@
 							<div class="info">
 								<a href="#"><img src="img/news.png" alt="news-img"></a>
 							</div>
-							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere deserunt exercitationem quia dolorem corrupti minima culpa quo nemo quod porro? <a href="#" title="Подробнее">...</a>
+							<div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere deserunt
+								exercitationem quia dolorem corrupti minima culpa quo nemo quod porro? <a href="#"
+									title="Подробнее">...</a>
 							</div>
 						</div>
 					</div>
@@ -174,7 +179,9 @@
 							<div class="info">
 								<a href="#"><img src="img/news.png" alt="news-img"></a>
 							</div>
-							<div class="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam ullam nisi enim, delectus dicta illo tempora quibusdam fugiat quas commodi. <a href="#" title="Подробнее">...</a>
+							<div class="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam ullam
+								nisi enim, delectus dicta illo tempora quibusdam fugiat quas commodi. <a href="#"
+									title="Подробнее">...</a>
 							</div>
 						</div>
 					</div>
@@ -205,7 +212,7 @@
 										состава на весь период до следующего планового ремонта</p>
 							</div>
 							<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId1">
-								Lorem, ipsum dolor.
+								Посмотреть лицензию
 							</button>
 							<div class="modal fade" id="modelId1" tabindex="-1" role="dialog"
 								aria-labelledby="modelTitleId" aria-hidden="true">
@@ -235,7 +242,7 @@
 							</script>
 						</div>
 						<div class="col-sm-4">
-							<h5>Lorem, ipsum.</h5>
+							<h5>Мы ремонтируем:</h5>
 							<ul class="list-group ">
 								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Крытый вагон</li>
 								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Полувагон</li>
@@ -268,16 +275,20 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-sm-4">
-								<h5>Lorem, ipsum.</h5>
+								<h5>Ремонт колесных пар</h5>
 								<div class="container">
-									<p>ipsum dolor sit amet consectetur laudantium repellendus repudiandae nam
-										architecto perferendis provident explicabo expedita totam voluptates quisquam
-										tempora cum ducimus delectus praesentium non, a quas minima! Ad accusamus
-										consequuntur, officiis enim cumque illum non eos. Eius, vero doloribus.
-										Repellendus architecto ipsa odio.</p>
+									<p>АО «УВК» предоставляет услуги по текущему, среднему и капитальному ремонту
+										колесных пар.</p>
+									<p>Ремонт колесных пар со сменой элементов с использованием материалов и запасных
+										частей собственности АО «УВК», а также собственности заказчика.</p>
+									<p>Наш персонал прошел обучение и имеет право производить ремонт колесных пар,
+										оборудованных кассетными подшипниками торговых марок BRENKO,SKF, TIMKEN , а
+										также
+										сдвоенных типа CRU Duplex, производства АО «ХАРП.
+									</p>
 								</div>
 								<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId2">
-									Lorem, ipsum dolor.
+									Посмотреть лицензию
 								</button>
 								<div class="modal fade" id="modelId2" tabindex="-1" role="dialog"
 									aria-labelledby="modelTitleId" aria-hidden="true">
@@ -308,15 +319,20 @@
 								</script>
 							</div>
 							<div class="col-sm-4">
-								<h5>Lorem, ipsum.</h5>
-								<ul class="list-group ">
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-								</ul>
+								<h5>Колесно-роликовый цех состоит из:</h5>
+								<div class="container">
+									<p>- Участок ремонта колесных пар со сменой элементов (ВКМ)</p>
+									<p>- Участок ремонта колесных пар обыкновенного и полного освидетельствования и ремонта
+									подшипников;</p>
+									<p>Основная технологическая линия обеспечивается межстаночным транспортным
+									оборудованием, определяющими элементами которого являются автоматические склады -
+									накопители колёс и осей с высокой степенью механизации основных, контрольных и
+									вспомогательных процессов.</p>
+									<p>Основное оборудование обслуживают комплексы межстаночного оборудования (МСТО) и
+									вспомогательное оборудование.</p>
+
+									</p>
+								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="container-fluid">
@@ -340,13 +356,9 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-sm-4">
-								<h5>Lorem, ipsum.</h5>
+								<h5>Дополнительные услуги</h5>
 								<div class="container">
-									<p>ipsum dolor sit amet consectetur laudantium repellendus repudiandae nam
-										architecto perferendis provident explicabo expedita totam voluptates quisquam
-										tempora cum ducimus delectus praesentium non, a quas minima! Ad accusamus
-										consequuntur, officiis enim cumque illum non eos. Eius, vero doloribus.
-										Repellendus architecto ipsa odio.</p>
+									<p>Наша компани</p>
 								</div>
 								<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId3">
 									Lorem, ipsum dolor.
