--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -18,20 +18,16 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <script src="../js/jquery-3.3.1.min.js"></script>
+<script>
+        $(window).on('load', function () {
+            $preloader = $('.loaderArea'),
+                $loader = $preloader.find('.loader');
+            $loader.fadeOut();
+            $preloader.delay(1).fadeOut('slow');
+        });
+    </script>
 <script src="../js/bootstrap.min.js"></script>
 <title>Уральская вагоноремонтная компания</title>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138353180-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-138353180-1');
-</script>
 </head>
 
 <body>
