--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<a href="#"><img src="img/news-1.jfif" alt="news-img"></a>
 							</div>
 							<div class="info">Сегодня сотрудники Уральской вагоноремонтной компании приняли участие в
-								соревнования по баскетболу, подъёму гири на время и настольному теннису. <a href="#"
+								соревнованиях по баскетболу, подъёму гири на время и настольному теннису. <a href="#"
 									title="Подробнее">...</a>
 							</div>
 						</div>
@@ -316,10 +316,6 @@
 									оборудованием, определяющими элементами которого являются автоматические склады -
 									накопители колёс и осей с высокой степенью механизации основных, контрольных и
 									вспомогательных процессов.</p>
-									<p>Основное оборудование обслуживают комплексы межстаночного оборудования (МСТО) и
-									вспомогательное оборудование.</p>
-
-									</p>
 								</div>
 							</div>
 							<div class="col-sm-4">
