--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </script>
 </head>
 <body>
+	<div class="loaderArea">
+		<div class="loader"></div>
+	</div>
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
@@ -307,12 +310,14 @@
 								<h5>Колесно-роликовый цех состоит из:</h5>
 								<div class="container">
 									<p>- Участок ремонта колесных пар со сменой элементов (ВКМ)</p>
-									<p>- Участок ремонта колесных пар обыкновенного и полного освидетельствования и ремонта
-									подшипников;</p>
+									<p>- Участок ремонта колесных пар обыкновенного и полного освидетельствования и
+										ремонта
+										подшипников;</p>
 									<p>Основная технологическая линия обеспечивается межстаночным транспортным
-									оборудованием, определяющими элементами которого являются автоматические склады -
-									накопители колёс и осей с высокой степенью механизации основных, контрольных и
-									вспомогательных процессов.</p>
+										оборудованием, определяющими элементами которого являются автоматические склады
+										-
+										накопители колёс и осей с высокой степенью механизации основных, контрольных и
+										вспомогательных процессов.</p>
 								</div>
 							</div>
 							<div class="col-sm-4">
