--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,6 +31,9 @@
 </script>
 </head>
 <body>
+    <div class="loaderArea">
+        <div class="loader"></div>
+    </div>
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="../index.html">
